# fapro-interview

./: README.md  pyproject.toml
app/: main.py
app/uf/: router.py
app/uf/controller/: controller.py
app/uf/models/: models.py
app/uf/services/: services.py
tests/: test-server.py  tests.py
