[tool.poetry]
name = "fapro-interview"
version = "0.1.0"
description = "API en Python que permita a los usuarios consultar el valor de la Unidad de Fomento para una fecha específica."
authors = ["Jesus <jesusalfonsojg7@gmail.com>"]
readme = "README.md"
packages = [{include = "fapro_interview"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
requests = "^2.28.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
